// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckoutErrorBanner stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  aria-live="polite"
  class="bg-destructive/10 border border-destructive/20 text-destructive px-4 py-3 rounded text-xl font-bold"
  role="alert"
>
  Something went wrong. Please try again.
</div>
`;

exports[`CheckoutErrorBanner stories snapshot > ShortMessage story renders and matches snapshot 1`] = `
<div
  aria-live="polite"
  class="bg-destructive/10 border border-destructive/20 text-destructive px-4 py-3 rounded text-xl font-bold"
  role="alert"
>
  Invalid shipping method.
</div>
`;
